// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`themer konsole theme generator should generate well-formatted themes 1`] = `
"
[Color0]
Color=101,96,102

[Color0Intense]
Color=132,126,133

[Color1]
Color=255,64,80

[Color1Intense]
Color=255,102,115

[Color2]
Color=164,204,53

[Color2Intense]
Color=182,214,93

[Color3]
Color=255,210,74

[Color3Intense]
Color=255,218,110

[Color4]
Color=102,191,255

[Color4Intense]
Color=133,203,255

[Color5]
Color=245,83,191

[Color5Intense]
Color=247,117,204

[Color6]
Color=38,201,158

[Color6Intense]
Color=81,211,177

[Color7]
Color=224,220,224

[Color7Intense]
Color=255,252,255

[Background]
Color=40,38,41

[BackgroundIntense]
Color=71,66,71

[Foreground]
Color=224,220,224

[ForegroundIntense]
Color=255,252,255

[General]
Description=Themer Dark
Opacity=1
"
`;

exports[`themer konsole theme generator should generate well-formatted themes 2`] = `
"
[Color0]
Color=71,66,71

[Color0Intense]
Color=101,96,102

[Color1]
Color=240,62,77

[Color1Intense]
Color=243,100,113

[Color2]
Color=151,189,45

[Color2Intense]
Color=172,202,87

[Color3]
Color=238,186,33

[Color3Intense]
Color=241,199,77

[Color4]
Color=83,166,225

[Color4Intense]
Color=117,183,231

[Color5]
Color=238,78,184

[Color5Intense]
Color=241,113,198

[Color6]
Color=31,197,152

[Color6Intense]
Color=76,208,173

[Color7]
Color=193,188,194

[Color7Intense]
Color=224,220,224

[Background]
Color=255,252,255

[BackgroundIntense]
Color=224,220,224

[Foreground]
Color=71,66,71

[ForegroundIntense]
Color=40,38,41

[General]
Description=Themer Light
Opacity=1
"
`;

exports[`themer konsole theme generator should provide installation instructions 1`] = `
"
Copy (or symlink) the generated files to \`~/.local/share/konsole\`:

    cp 'themer-dark.colorscheme' ~/.local/share/konsole/
    cp 'themer-light.colorscheme' ~/.local/share/konsole/

Then choose the desired theme in Konsole > Settings > Edit Current Profile > Appearance.
"
`;
